--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>first website</h1>
     <h2>i am mahmud</h2>
-    <h3>i am munir</h3>
+    <h3>i am sirajum munir</h3>
     <img src="git.JPG" alt="">
 </body>
 </html>
